# getting-started-bazel

./: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  go.mod  requirements.txt  requirements_lock.txt
first_rule/: BUILD.bazel  multiple_output_rule.bzl  my_input_file.txt  my_input_file2.txt  single_output_rule.bzl
golang-app/cmd/: BUILD.bazel  main.go
golang-app/handlers/: BUILD.bazel  handler.go
golang-app/pkg/greetings/: BUILD.bazel  greetings.go  greetings_test.go
my_build_tool/: BUILD.bazel  build_tool.py  input.txt  my_build_rule.bzl
python-app/: BUILD.bazel  cli.py  gui.py
python-app/lib/: BUILD.bazel  tools.py
